dateset/piraeus-operator-2/charts/piraeus/deployment.yaml
# Source: piraeus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic_parameters-controller-manager
  labels:
    
spec:
  replicas: dynamic_parameters
  selector:
    matchLabels:
      
  template:
    metadata:
      labels:
      
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      containers:
      - args:
          - --health-probe-bind-address=:8081
          - --metrics-bind-address=127.0.0.1:8080
          - --metrics-bind-address=0
          - --dynamic_parameters=dynamic_parameters
        command:
        - /manager
        image: dynamic_parameters:dynamic_parameters
        imagePullPolicy: dynamic_parameters
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
        securityContext:
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --tls-private-key-file=/etc/tls/tls.key
        - --tls-cert-file=/etc/tls/tls.crt
        - --dynamic_parameters=dynamic_parameters
        image: dynamic_parameters:dynamic_parameters
        imagePullPolicy: dynamic_parameters
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
        securityContext:
        volumeMounts:
          - mountPath: /etc/tls
            name: cert
      securityContext:
        runAsNonRoot: true
      serviceAccountName: dynamic_parameters
      terminationGracePeriodSeconds: 10
      tolerations:
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: dynamic_parameters
