dateset/piraeus-operator-2/charts/piraeus/piraeus_templates_deployment_12.yaml
# Source: piraeus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-piraeus-controller-manager
  labels:
    helm.sh/chart: piraeus-2.4.1
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: piraeus-operator
      app.kubernetes.io/name: piraeus-datastore
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/component: piraeus-operator
        app.kubernetes.io/name: piraeus-datastore
        app.kubernetes.io/instance: my-release
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      containers:
      - args:
          - --health-probe-bind-address=:8081
          - --metrics-bind-address=0
          - --leader-elect=true
        command:
        - /manager
        image: quay.io/piraeusdatastore/piraeus-operator:v2.4.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
            {}
        securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: my-release-piraeus
      terminationGracePeriodSeconds: 10
      tolerations:
        - effect: NoSchedule
          key: drbd.linbit.com/lost-quorum
        - effect: NoSchedule
          key: drbd.linbit.com/force-io-error
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: my-release-piraeus-tls
