dateset/piraeus-operator-2/charts/piraeus/piraeus_templates_validating-webhook-configuration_13.yaml
# Source: piraeus/templates/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-piraeus-validating-webhook-configuration
  labels:
    helm.sh/chart: piraeus-2.4.1
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'my-release-piraeus-webhook-service'
      namespace: 'default'
      path: /validate-piraeus-io-v1-linstorcluster
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkekNDQWwrZ0F3SUJBZ0lSQU1HYkJwTzl3OHAreTcrR1B2Sk9Ma1F3RFFZSktvWklodmNOQVFFTEJRQXcKT1RFM01EVUdBMVVFQXhNdWJYa3RjbVZzWldGelpTMXdhWEpoWlhWekxYZGxZbWh2YjJzdGMyVnlkbWxqWlM1awpaV1poZFd4MExuTjJZekFlRncweU5EQXpNekV3T0RReU1qWmFGdzB6TkRBek1qa3dPRFF5TWpaYU1Ea3hOekExCkJnTlZCQU1UTG0xNUxYSmxiR1ZoYzJVdGNHbHlZV1YxY3kxM1pXSm9iMjlyTFhObGNuWnBZMlV1WkdWbVlYVnMKZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZWt6dmNGUEwyVHlxRApYNklubTZMc0hnQX [...]
  failurePolicy: Fail
  timeoutSeconds: 2
  name: vlinstorcluster.kb.io
  rules:
  - apiGroups:
    - piraeus.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - linstorclusters
  sideEffects: None
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: 'my-release-piraeus-webhook-service'
      namespace: 'default'
      path: /validate-piraeus-io-v1-linstornodeconnection
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkekNDQWwrZ0F3SUJBZ0lSQU1HYkJwTzl3OHAreTcrR1B2Sk9Ma1F3RFFZSktvWklodmNOQVFFTEJRQXcKT1RFM01EVUdBMVVFQXhNdWJYa3RjbVZzWldGelpTMXdhWEpoWlhWekxYZGxZbWh2YjJzdGMyVnlkbWxqWlM1awpaV1poZFd4MExuTjJZekFlRncweU5EQXpNekV3T0RReU1qWmFGdzB6TkRBek1qa3dPRFF5TWpaYU1Ea3hOekExCkJnTlZCQU1UTG0xNUxYSmxiR1ZoYzJVdGNHbHlZV1YxY3kxM1pXSm9iMjlyTFhObGNuWnBZMlV1WkdWbVlYVnMKZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZWt6dmNGUEwyVHlxRApYNklubTZMc0hnQX [...]
  failurePolicy: Fail
  timeoutSeconds: 2
  name: vlinstornodeconnection.kb.io
  rules:
    - apiGroups:
        - piraeus.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - linstornodeconnections
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'my-release-piraeus-webhook-service'
      namespace: 'default'
      path: /validate-piraeus-io-v1-linstorsatellite
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkekNDQWwrZ0F3SUJBZ0lSQU1HYkJwTzl3OHAreTcrR1B2Sk9Ma1F3RFFZSktvWklodmNOQVFFTEJRQXcKT1RFM01EVUdBMVVFQXhNdWJYa3RjbVZzWldGelpTMXdhWEpoWlhWekxYZGxZbWh2YjJzdGMyVnlkbWxqWlM1awpaV1poZFd4MExuTjJZekFlRncweU5EQXpNekV3T0RReU1qWmFGdzB6TkRBek1qa3dPRFF5TWpaYU1Ea3hOekExCkJnTlZCQU1UTG0xNUxYSmxiR1ZoYzJVdGNHbHlZV1YxY3kxM1pXSm9iMjlyTFhObGNuWnBZMlV1WkdWbVlYVnMKZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZWt6dmNGUEwyVHlxRApYNklubTZMc0hnQX [...]
  failurePolicy: Fail
  timeoutSeconds: 2
  name: vlinstorsatellite.kb.io
  rules:
  - apiGroups:
    - piraeus.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - linstorsatellites
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'my-release-piraeus-webhook-service'
      namespace: 'default'
      path: /validate-piraeus-io-v1-linstorsatelliteconfiguration
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkekNDQWwrZ0F3SUJBZ0lSQU1HYkJwTzl3OHAreTcrR1B2Sk9Ma1F3RFFZSktvWklodmNOQVFFTEJRQXcKT1RFM01EVUdBMVVFQXhNdWJYa3RjbVZzWldGelpTMXdhWEpoWlhWekxYZGxZbWh2YjJzdGMyVnlkbWxqWlM1awpaV1poZFd4MExuTjJZekFlRncweU5EQXpNekV3T0RReU1qWmFGdzB6TkRBek1qa3dPRFF5TWpaYU1Ea3hOekExCkJnTlZCQU1UTG0xNUxYSmxiR1ZoYzJVdGNHbHlZV1YxY3kxM1pXSm9iMjlyTFhObGNuWnBZMlV1WkdWbVlYVnMKZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZWt6dmNGUEwyVHlxRApYNklubTZMc0hnQX [...]
  failurePolicy: Fail
  timeoutSeconds: 2
  name: vlinstorsatelliteconfiguration.kb.io
  rules:
  - apiGroups:
    - piraeus.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - linstorsatelliteconfigurations
  sideEffects: None
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: 'my-release-piraeus-webhook-service'
      namespace: 'default'
      path: /validate-storage-k8s-io-v1-storageclass
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkekNDQWwrZ0F3SUJBZ0lSQU1HYkJwTzl3OHAreTcrR1B2Sk9Ma1F3RFFZSktvWklodmNOQVFFTEJRQXcKT1RFM01EVUdBMVVFQXhNdWJYa3RjbVZzWldGelpTMXdhWEpoWlhWekxYZGxZbWh2YjJzdGMyVnlkbWxqWlM1awpaV1poZFd4MExuTjJZekFlRncweU5EQXpNekV3T0RReU1qWmFGdzB6TkRBek1qa3dPRFF5TWpaYU1Ea3hOekExCkJnTlZCQU1UTG0xNUxYSmxiR1ZoYzJVdGNHbHlZV1YxY3kxM1pXSm9iMjlyTFhObGNuWnBZMlV1WkdWbVlYVnMKZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZWt6dmNGUEwyVHlxRApYNklubTZMc0hnQX [...]
  failurePolicy: Fail
  timeoutSeconds: 2
  name: vstorageclass.kb.io
  rules:
    - apiGroups:
        - storage.k8s.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - storageclasses
  sideEffects: None
